--- a/object_detection_api/static/index.html
+++ b/object_detection_api/static/index.html
@@ -12,7 +12,8 @@
         <div class="drag-drop-area" id="dragDropArea">
             <p>Drag & Drop your files here</p>
         </div>
-        <div id="output"></div>
+        <div id="output_image"></div>
+        <div id="output_analysis"></div>
     </div>
     <script src="/static/index.js"></script>
 </body>
