--- a/object_detection_api/static/index.html
+++ b/object_detection_api/static/index.html
@@ -15,6 +15,6 @@
         <div id="output_image"></div>
         <div id="output_analysis"></div>
     </div>
-    <script src="/static/index.js"></script>
+    <script src="/static/index.js?v=1.0"></script>
 </body>
 </html>
