--- a/object_detection_api/static/index.html
+++ b/object_detection_api/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,4 +17,17 @@
     </div>
     <script src="/static/index.js?v=1.0"></script>
 </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>FastAPI video streaming</title>
+    </head>
+    <body>
+        <video width="1200" controls muted="muted">
+            <source src="http://localhost:8000/video" type="video/mp4" />
+        </video>
+    </body>
 </html>
